@@ -553,6 +553,19 @@ wxString wxHtmlTag::GetParam(const wxString& par, bool with_quotes) const
         return m_ParamValues[index];
 }
 
+bool wxHtmlTag::GetParamAsString(const wxString& par, wxString *str) const
+{
+    wxCHECK_MSG( str, false, wxT("NULL output string argument") );
+
+    int index = m_ParamNames.Index(par, false);
+    if (index == wxNOT_FOUND)
+        return false;
+
+    *str = m_ParamValues[index];
+
+    return true;
+}
+
 int wxHtmlTag::ScanParam(const wxString& par,
                          const char *format,
                          void *param) const
